apps/development/wallabag/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: wallabag
  annotations:
    gethomepage.dev/description: Wallabag
spec:
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 80
      name: http
  selector:
    app: wallabag
  type: ClusterIP
