apps/development/wallabag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: wallabag-ingress
    namespace: wallabag
    annotations:
      gethomepage.dev/description: Wallabag
      gethomepage.dev/enabled: "true"
      gethomepage.dev/group: Cluster Management
      gethomepage.dev/icon: wallabag.png
      gethomepage.dev/name: Wallabag
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: wallabag.nathank.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wallabag
                port:
                  name: http
